modified:   FEATURES.md 	modified:   app/Events/Modul_Umum/MessageSent.php 	modified:   app/Events/Modul_Umum/UserStatusChanged.php 	new file:   app/Http/Controllers/Modul_Umum/Camera_Controller.php 	modified:   app/Http/Controllers/Modul_Umum/Chat_Controller.php 	new file:   app/Http/Requests/Modul_Umum/Camera_Request.php 	modified:   app/Http/Requests/Modul_Umum/Chat_Request.php 	modified:   app/Models/Modul_Auth/User.php 	new file:   app/Models/Modul_Umum/Camera_Model.php 	modified:   app/Models/Modul_Umum/Conversation_Model.php 	modified:   app/Models/Modul_Umum/Message_Model.php 	modified:   app/Models/Modul_Umum/Message_Read_Model.php 	modified:   app/Models/Modul_Umum/Participant_Model.php 	modified:   app/Models/Modul_Umum/User_Online_Status_Model.php 	modified:   config/broadcasting.php 	modified:   config/reverb.php 	modified:   database/migrations/0001_01_01_000000_create_users_table.php 	modified:   database/migrations/2025_05_16_133005_create_modul_umum_table.php 	modified:   database/seeders/UsersTableSeeder.php 	modified:   package-lock.json 	modified:   package.json 	modified:   resources/js/app.js 	modified:   resources/js/bootstrap.js 	modified:   resources/js/echo.js 	modified:   resources/views/layouts/sidebar.blade.php 	new file:   resources/views/modul_umum/camera.blade.php 	modified:   resources/views/modul_umum/chat.blade.php 	modified:   routes/channels.php 	modified:   routes/web.php 	modified:   vite.config.js

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
+        "@soketi/soketi": "^1.6.1",
+        "choices.js": "^11.1.0",
         "flowbite": "^3.1.2"
     }
 }
